# codex-teste

./: .dockerignore  .env.example  .env.sample  .gitignore  AGENTS.md  Dockerfile  README.md  db.sqlite3  docker-compose.yml  pyproject.toml  roteiro.md
.github/workflows/: ci.yml
alloy/: config.alloy
config/: settings.py  urls.py
core/: test_health.py  test_hello.py  views.py
docker/: entrypoint.sh
terraform/: README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
